# voxy-linux

./: .envrc  .gitignore  DESIGN.md  PKGBUILD  PRD.md  README.md  flake.nix  justfile  mypy.ini  nixos-module.nix  prd.md  presetup-arch.sh  pyproject.toml  pyrightconfig.json  ralf-progress.txt
.github/workflows/: fizzy-sync.yml  hyprland-plugin-tests.yml  release.yml
docs/: changelog.rst  conf.py  configuration.rst  contributing.rst  how-it-works.rst  index.rst  installation.rst  privacy.rst  quickstart.rst  troubleshooting.rst  usage.rst
docs/_static/: voxy.css
docs/adr/: 0001-cursor-overlay.md
docs/architecture/: display-servers.rst  index.rst  pipeline.rst
docs/components/: audio.rst  cursor-overlay.rst  daemon.rst  hotkey.rst  index.rst  inserter.rst  overlay.rst  postprocess.rst  transcriber.rst  tray.rst
docs/decisions/: 0001-cursor-overlay.md  index.rst
docs/hyprland-plugin/: index.rst  render-contract.rst  test-strategy.rst
hyprland-plugin/cursor-shape-emit/: Makefile  README.md  justfile  main.cpp  outline.cpp  outline.hpp
hyprland-plugin/cursor-shape-emit/tests/: integration_smoke.sh  test_outline.cpp
justfiles/: dev.just  docs.just  stats.just
src/voxy/: __init__.py  __main__.py  app.py  audio.py  config.py  cursor_overlay.py  daemon.py  hotkey.py  inserter.py  overlay.py  postprocess.py  transcriber.py  tray.py
tests/: test_app.py  test_config.py  test_cursor_overlay.py  test_daemon.py  test_feedback.py  test_hotkey.py  test_inserter.py  test_overlay.py  test_postprocess.py  test_transcriber.py
