[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voxy-linux"
version = "2026.5.4.1"
description = "Local offline voice dictation for Linux"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
classifiers = [
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "faster-whisper",
    "sounddevice",
    "evdev; sys_platform == 'linux'",
    "numpy",
    "pynput; sys_platform == 'linux'",
    "dbus-next",
    "pynput",
]

[project.scripts]
voxy = "voxy.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
voxy = ["*.wav", "icons/*.svg"]

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]
# Needs system gtk4 + gtk4-layer-shell packages (see presetup-arch.sh).
wayland = ["pygobject", "pycairo"]
x11 = ["python-xlib", "pycairo"]
docs = [
    "sphinx>=8",
    "shibuya>=2024.10",
    "sphinxcontrib-mermaid>=1.0",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.6",
    "sphinx-tabs>=3.4",
    "sphinx-togglebutton>=0.3",
    "myst-parser>=4",
    "sphinx-autobuild>=2024.10",
]

# mypy config lives in mypy.ini (TOML overrides not supported in this mypy version)

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["voxy"]

[tool.pytest.ini_options]
pythonpath = ["src"]
