[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voxy-linux"
version = "0.1.0"
description = "Local offline voice dictation for Linux"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "faster-whisper",
    "sounddevice",
    "evdev; sys_platform == 'linux'",
    "pynput",
    "numpy",
    "dbus-next",
]

[project.scripts]
voxy = "voxy.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
voxy = ["*.wav", "icons/*.svg"]

[project.optional-dependencies]
dev = ["pytest", "mypy"]
# Wayland (Hyprland) cursor overlay — needs system gtk4 + gtk4-layer-shell
# packages too (see presetup-arch.sh).
cursor-overlay = ["pygobject", "pycairo"]
docs = [
    "sphinx>=8",
    "shibuya>=2024.10",
    "sphinxcontrib-mermaid>=1.0",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.6",
    "sphinx-tabs>=3.4",
    "sphinx-togglebutton>=0.3",
    "myst-parser>=4",
    "sphinx-autobuild>=2024.10",
]

# mypy config lives in mypy.ini (TOML overrides not supported in this mypy version)

[tool.pytest.ini_options]
pythonpath = ["src"]
